# TKT_Ohjelmointi

./: README.md
exercises/week2/: pyproject.toml
exercises/week2/payment_card/src/: payment_card.py
exercises/week2/payment_card/src/tests/: payment_card_test.py
exercises/week2/unicafe/: .coverage  .coveragerc
exercises/week2/unicafe/src/tests/: payment_card_test.py
shared-costs/: costs.json  pyproject.toml
shared-costs/documentation/: specification.md  timetracking.md
shared-costs/src/shared_costs/: auth.py  db.py  main.py
shared-costs/tests/: test_auth.py  test_db.py
