[project]
name = "shared-costs"
version = "0.1.0"
description = ""
authors = [
    {name = "christienetto",email = "christienetto@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tk (>=0.1.0,<0.2.0)"
]

[tool.poetry]
packages = [{include = "shared_costs", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pylint = "^3.3.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
